tests/snapshots/delete_operations_test__x_at_end_of_line.snap
---
source: tests/delete_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:3
Lines: 1

Buffer:
hel[l]
