tests/snapshots/delete_operations_test__x_empty_line.snap
---
source: tests/delete_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 3

Buffer:
hello
[ ]
world
